docs(backend): add event swagger docs
